--- a/base/_style-settings.scss
+++ b/base/_style-settings.scss
@@ -9,53 +9,53 @@ settings:
 		description: select your preferred cat collar.
 		type: class-select
 		allowEmpty: false
-		default: mn-protection
+		default: protection
 		options:
 		-
 			label: protection
-			value: mn-protection
+			value: mn-accent-protection
 		-
 			label: prosperity
-			value: mn-prosperity
+			value: mn-accent-prosperity
 		-
 			label: success
-			value: mn-success
+			value: mn-accent-success
 		-
 			label: safety
-			value: mn-safety
+			value: mn-accent-safety
 		-
 			label: friendship
-			value: mn-friendship
+			value: mn-accent-friendship
 		-
 			label: wisdom
-			value: mn-wisdom
+			value: mn-accent-wisdom
 		-
 			label: victorious
-			value: mn-victorious
+			value: mn-accent-victorious
 		-
 			label: longevity
-			value: mn-longevity
+			value: mn-accent-longevity
 		-
 			label: love
-			value: mn-love
+			value: mn-accent-love
 		-
 			label: red
-			value: mn-red
+			value: mn-accent-red
 		-
 			label: goldenrod
-			value: mn-goldenrod
+			value: mn-accent-goldenrod
 		-
 			label: teal
-			value: mn-teal
+			value: mn-accent-teal
 		-
 			label: sky
-			value: mn-sky
+			value: mn-accent-sky
 		-
 			label: lavender
-			value: mn-lavender
+			value: mn-accent-lavender
 		-
 			label: rose
-			value: mn-rose
+			value: mn-accent-rose
 	-
 		id: mn-page-title
 		title: file name color
